--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="santogrial.html"> SANTO GRIAL </a>
     <div class="contenedor">
         <div class="caja1">
             1
@@ -17,7 +18,7 @@
         <div class="caja3">
             3
         </div>
-        <div class="caja4">
+        <!-- <div class="caja4">
             4
         </div>
         <div class="caja5">
@@ -25,7 +26,7 @@
         </div>
         <div class="caja6">
             6
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
